apps/setup/src/assets/apps/files/envoy.yaml
admin:
  # access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: "0.0.0.0"
      port_value: 9901
      protocol: "TCP"
overload_manager:
  resource_monitors:
  - name: "envoy.resource_monitors.global_downstream_max_connections"
    typed_config:
      "@type": "type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig"
      max_active_downstream_connections: 200
static_resources:
  clusters:
  - connect_timeout: "1s"
    dns_failure_refresh_rate:
      base_interval: "1s"
      max_interval: "5s"
    http2_protocol_options: {}
    load_assignment:
      cluster_name: "ext_proc"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "tao-ce-em-sidecar.default.svc.cluster.local"
                port_value: 18084
    name: "ext_proc"
    type: "strict_dns"
  - connect_timeout: "1s"
    dns_failure_refresh_rate:
      base_interval: "1s"
      max_interval: "5s"
    lb_policy: "round_robin"
    load_assignment:
      cluster_name: "nextgen_tao_payments_be_cluster"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "tao-ce-tao-payments-be"
                port_value: 3000
    name: "nextgen_tao_payments_be_cluster"
    type: "strict_dns"
  - connect_timeout: "1s"
    dns_failure_refresh_rate:
      base_interval: "1s"
      max_interval: "5s"
    lb_policy: "round_robin"
    load_assignment:
      cluster_name: "nextgen_tao_portal_be_cluster"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "tao-ce-tao-portal-be"
                port_value: 3000
    name: "nextgen_tao_portal_be_cluster"
    type: "strict_dns"
  - connect_timeout: "1s"
    dns_failure_refresh_rate:
      base_interval: "1s"
      max_interval: "5s"
    lb_policy: "round_robin"
    load_assignment:
      cluster_name: "nextgen_tao_deliver_be_cluster"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "tao-ce-tao-deliver-be.default.svc.cluster.local"
                port_value: 80
    name: "nextgen_tao_deliver_be_cluster"
    type: "strict_dns"
  - connect_timeout: "1s"
    dns_failure_refresh_rate:
      base_interval: "1s"
      max_interval: "5s"
    lb_policy: "round_robin"
    load_assignment:
      cluster_name: "nextgen_tao_studio_be_cluster"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "tao-ce-tao-studio-be"
                port_value: 80
    name: "nextgen_tao_studio_be_cluster"
    type: "strict_dns"
  - connect_timeout: "1s"
    dns_failure_refresh_rate:
      base_interval: "1s"
      max_interval: "5s"
    lb_policy: "round_robin"
    load_assignment:
      cluster_name: "nextgen_tao_scoring_service_be_cluster"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "tao-ce-tao-scoring-service-be"
                port_value: 8080
    name: "nextgen_tao_scoring_service_be_cluster"
    type: "strict_dns"
  - connect_timeout: "1s"
    dns_failure_refresh_rate:
      base_interval: "1s"
      max_interval: "5s"
    lb_policy: "round_robin"
    load_assignment:
      cluster_name: "nextgen_tao_manual_scoring_be_cluster"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "tao-ce-tao-manual-scoring-be"
                port_value: 8080
    name: "nextgen_tao_manual_scoring_be_cluster"
    type: "strict_dns"
  - connect_timeout: "1s"
    dns_failure_refresh_rate:
      base_interval: "1s"
      max_interval: "5s"
    lb_policy: "round_robin"
    load_assignment:
      cluster_name: "nextgen_tao_hbl_scoring_engine_be_cluster"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "tao-ce-tao-hbl-scoring-engine-be"
                port_value: 8080
    name: "nextgen_tao_hbl_scoring_engine_be_cluster"
    type: "strict_dns"
  - connect_timeout: "1s"
    dns_failure_refresh_rate:
      base_interval: "1s"
      max_interval: "5s"
    lb_policy: "round_robin"
    load_assignment:
      cluster_name: "nextgen_proctoring_lti13_gateway_cluster"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "tao-ce-proctoring-lti13-gateway"
                port_value: 8080
    name: "nextgen_proctoring_lti13_gateway_cluster"
    type: "strict_dns"
  - connect_timeout: "1s"
    dns_failure_refresh_rate:
      base_interval: "1s"
      max_interval: "5s"
    lb_policy: "round_robin"
    load_assignment:
      cluster_name: "nextgen_tao_simple_reports_be_cluster"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "tao-ce-tao-simple-reports-be"
                port_value: 9001
    name: "nextgen_tao_simple_reports_be_cluster"
    type: "strict_dns"
  - connect_timeout: "1s"
    dns_failure_refresh_rate:
      base_interval: "1s"
      max_interval: "5s"
    lb_policy: "round_robin"
    load_assignment:
      cluster_name: "nextgen_tao_dynamic_query_api_be_cluster"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "tao-ce-tao-dynamic-query-api"
                port_value: 3000
    name: "nextgen_tao_dynamic_query_api_be_cluster"
    type: "strict_dns"
  - connect_timeout: "1s"
    dns_failure_refresh_rate:
      base_interval: "1s"
      max_interval: "5s"
    lb_policy: "round_robin"
    load_assignment:
      cluster_name: "nextgen_tao_node_auth_server_be_cluster"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "tao-ce-em-auth-server"
                port_value: 8080
    name: "nextgen_tao_node_auth_server_be_cluster"
    type: "strict_dns"
  listeners:
  - address:
      socket_address:
        address: "0.0.0.0"
        port_value: 80
        protocol: "TCP"
    filter_chains:
    - filters:
      - name: "envoy.filters.network.http_connection_manager"
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          codec_type: "auto"
          http_filters:
          - name: "envoy.filters.http.ext_proc"
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor"
              failure_mode_allow: false
              grpc_service:
                envoy_grpc:
                  cluster_name: "ext_proc"
              message_timeout: "5s"
              processing_mode:
                request_body_mode: "BUFFERED"
                request_header_mode: "SEND"
                request_trailer_mode: "SKIP"
                response_body_mode: "NONE"
                response_header_mode: "SEND"
                response_trailer_mode: "SKIP"
          - name: "envoy.filters.http.router"
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
          route_config:
            name: "local_route"
            virtual_hosts:
            - domains:
              - "community.tao.internal"
              name: "nextgen_vs"
              routes:
              - match:
                  prefix: "/payments-be/"
                route:
                  cluster: "nextgen_tao_payments_be_cluster"
              - match:
                  prefix: "/portal-be/"
                route:
                  cluster: "nextgen_tao_portal_be_cluster"
                  prefix_rewrite: "/"
              - match:
                  prefix: "/deliver/"
                route:
                  cluster: "nextgen_tao_deliver_be_cluster"
                  prefix_rewrite: "/"
              - match:
                  prefix: "/studio-be/"
                route:
                  cluster: "nextgen_tao_studio_be_cluster"
                  prefix_rewrite: "/"
              - match:
                  prefix: "/ss-be/"
                route:
                  cluster: "nextgen_tao_scoring_service_be_cluster"
                  prefix_rewrite: "/"
              - match:
                  prefix: "/ms-be/"
                route:
                  cluster: "nextgen_tao_manual_scoring_be_cluster"
                  prefix_rewrite: "/"
              - match:
                  prefix: "/hbl-be/"
                route:
                  cluster: "nextgen_tao_hbl_scoring_engine_be_cluster"
                  prefix_rewrite: "/"
              - match:
                  prefix: "/pr-lti-gateway/"
                route:
                  cluster: "nextgen_proctoring_lti13_gateway_cluster"
                  prefix_rewrite: "/"
              - match:
                  prefix: "/sr-be/"
                route:
                  cluster: "nextgen_tao_simple_reports_be_cluster"
                  prefix_rewrite: "/"
              - match:
                  prefix: "/dynamic-api/"
                route:
                  cluster: "nextgen_tao_dynamic_query_api_be_cluster"
                  prefix_rewrite: "/"
              - match:
                  prefix: "/auth-server/"
                route:
                  cluster: "nextgen_tao_node_auth_server_be_cluster"
                  prefix_rewrite: "/"
          stat_prefix: "ingress_http"
    per_connection_buffer_limit_bytes: 52428800
